--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <div class="grid md:grid-cols-2 gap-8">
             <div>
                 <div class="mt-4 md:mt-8 mb-4 text-neutral-500">{{ page.date | date: "%b %d, %Y" }}</div>
-                <h1 class="text-5xl md:w-10/12">{{ page.title}}</h1>
+                <h1 class="text-2xl md:text-5xl md:w-10/12">{{ page.title}}</h1>
             </div>
             <div>
                 {% if page.cover %}
@@ -22,6 +22,10 @@
     <div class="max-w-7xl mx-auto px-4 mb-16">
         <div class="grid md:grid-cols-4 gap-8">
             <div class="md:col-span-3 overflow-auto">
+                <div class="mb-4">
+                    <h2 class="text-lg">目录</h2>
+                    {% include toc.html html=content %}
+                </div>
                 <div class="markdown-body">
                     {{ content }}
                 </div>
