--- a/_includes/gdpr.html
+++ b/_includes/gdpr.html
@@ -1,13 +1,13 @@
 <div class="fixed bottom-0 w-full bg-secondary-500 py-6" x-data="gdpr()" x-show="getShow()">
     <div class="md:flex justify-between space-y-8 md:space-y-4 max-w-7xl mx-auto px-4">
         <div>
-            <p class="text-neutral-400 mb-1">{{ site.data.local.gdpr_title }}</p>
-            <a class="text-primary-500 hover:text-white" href="/privacy-policy">{{ site.data.local.gdpr_link }}<i
+            <p class="text-neutral-400 mb-1">我们使用第三方 Cookie 来个性化您的体验。</p>
+            <a class="text-primary-500 hover:text-white" href="/privacy-policy">阅读我们的 Cookie 政策<i
                 class="ml-2 fas fa-angles-right"></i></a>
         </div>
         <div class="leading-3 text-center">
-            <button class="bg-neutral-600 hover:bg-neutral-400 text-white py-2 px-4 rounded" @click="decline()">{{ site.data.local.decline }}</button>
-            <button class="ml-2 bg-primary-500 hover:bg-primary-400 text-white py-2 px-4 rounded" @click="allow()">{{ site.data.local.allow }}</button>
+            <button class="bg-neutral-600 hover:bg-neutral-400 text-white py-2 px-4 rounded" @click="decline()">拒绝</button>
+            <button class="ml-2 bg-primary-500 hover:bg-primary-400 text-white py-2 px-4 rounded" @click="allow()">允许</button>
         </div>
     </div>
 </div>
