--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,7 @@
                     <p class="text-neutral-200 mb-8">Great software that allows you to chat from any place at any time
                         without any interruption.</p>
                     <a class="bg-secondary-500 rounded-full py-2 px-6 text-white hover:bg-secondary-400 hover:text-white"
-                       href="#">Join US
-                        Now</a>
+                       href="/about.html">关于我们</a>
                 </div>
                 <div class="md:col-span-2 md:pl-8">
                     <img class="w-full" src="/images/banner.svg">
@@ -171,8 +170,8 @@
     </div>
     <div class="max-w-7xl mx-auto px-4 my-16">
         <div class="text-center">
-            <div class="uppercase text-secondary-500">Latest Blog</div>
-            <h2 class="text-2xl mt-4 mb-8">Read Our Latest Blog</h2>
+            <div class="uppercase text-secondary-500">最新博客</div>
+            <h2 class="text-2xl mt-4 mb-8">阅读我们最新的博客</h2>
         </div>
         <div class="grid md:grid-cols-3 gap-8">
             {% for post in site.posts limit:3 %}
