--- a/_layouts/themes.html
+++ b/_layouts/themes.html
@@ -6,7 +6,7 @@
 <main>
     <div class="themes_banner">
         <div class="max-w-7xl mx-auto px-4 py-16">
-            <h1 class="text-white text-center text-xl">WordPress & Shopify Themes</h1>
+            <h1 class="text-white text-center text-xl">WordPress 主题 & Shopify 主题</h1>
         </div>
     </div>
     <div class="max-w-7xl mx-auto px-4 my-16">
