--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@
 <main>
     <div class="about_banner bg-cover">
         <div class="max-w-7xl mx-auto px-4 py-24">
-            <h1 class="text-white text-center text-xl">About</h1>
+            <h1 class="text-white text-center text-xl">关于我们</h1>
         </div>
     </div>
     <div class="max-w-7xl mx-auto px-4 my-16">
