--- a/_layouts/plugins.html
+++ b/_layouts/plugins.html
@@ -6,7 +6,7 @@
 <main>
     <div class="bg-secondary-500">
         <div class="max-w-7xl mx-auto px-4 py-16">
-            <h1 class="text-white text-center text-xl">WordPress & Shopify Plugins</h1>
+            <h1 class="text-white text-center text-xl">WordPress 插件 & Shopify 应用</h1>
         </div>
     </div>
     <div class="max-w-7xl mx-auto px-4 my-16">
