--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
         <div class="max-w-7xl mx-auto px-4 mb-8">
             <div class="grid md:grid-cols-3 gap-8 py-16">
                 <div class="md:pr-4">
-                    <h1 class="text-5xl text-white leading-tight mb-4">Ready to take your SEO to the next level?</h1>
+                    <h1 class="text-4xl text-white leading-tight mb-4">准备好将您的网站 SEO 提升到一个新的水平了吗？</h1>
                     <p class="text-neutral-200 mb-8">Great software that allows you to chat from any place at any time
                         without any interruption.</p>
                     <a class="bg-secondary-500 rounded-full py-2 px-6 text-white hover:bg-secondary-400 hover:text-white"
@@ -26,7 +26,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-edit"></i></span>
-                <h2 class="mt-6 mb-2">Guest Post Writing</h2>
+                <h2 class="mt-6 mb-2">内容写作</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -35,7 +35,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-bullhorn"></i></span>
-                <h2 class="mt-6 mb-2">Guest Post Publish</h2>
+                <h2 class="mt-6 mb-2">内容发布</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -44,7 +44,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-earth-asia"></i></span>
-                <h2 class="mt-6 mb-2">SEO Hosting</h2>
+                <h2 class="mt-6 mb-2">SEO托管</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -53,7 +53,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-arrow-up-right-dots"></i></span>
-                <h2 class="mt-6 mb-2">Website Promotion</h2>
+                <h2 class="mt-6 mb-2">网络营销</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -62,7 +62,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-sitemap"></i></span>
-                <h2 class="mt-6 mb-2">Website Development</h2>
+                <h2 class="mt-6 mb-2">网站开发</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -71,7 +71,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-rotate"></i></span>
-                <h2 class="mt-6 mb-2">Website Operation</h2>
+                <h2 class="mt-6 mb-2">网站优化</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -80,7 +80,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-registered"></i></span>
-                <h2 class="mt-6 mb-2">Trademark Registered</h2>
+                <h2 class="mt-6 mb-2">商标注册</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -89,7 +89,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fab fa-creative-commons"></i></span>
-                <h2 class="mt-6 mb-2">Company Registered </h2>
+                <h2 class="mt-6 mb-2">公司注册</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -98,7 +98,7 @@
                 <span
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fab fa-stripe-s"></i></span>
-                <h2 class="mt-6 mb-2">Stripe Registered</h2>
+                <h2 class="mt-6 mb-2">Stripe 注册</h2>
                 <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
                     blanditiis. Omnis in natus amet.
                 </div>
@@ -154,14 +154,14 @@
     <div class="max-w-7xl mx-auto px-4 my-16">
         <div class="grid md:grid-cols-2 gap-8 p-8 rounded-md shadow-lg">
             <div>
-                <h2 class="text-xl md:w-8/12">Search engine optimization with 100% ROI guaranteed</h2>
+                <h2 class="text-xl md:w-8/12">搜索引擎优化，保证 100% ROI</h2>
                 <div class="text-neutral-400 my-4 md:w-8/12">Sunt dicta et impedit. Similique iste consequatur voluptas
                     voluptatibus corporis. Nisi fuga qui
                     quasi assumenda. Libero dolores aut autem harum aspernatur magni eaque. Commodi ab molestiae et
                     doloremque sint.
                 </div>
                 <a class="bg-secondary-500 rounded-full py-2 px-6 text-white hover:bg-secondary-400 hover:text-white"
-                   href="#">About US</a>
+                   href="/about.html">关于我们</a>
             </div>
             <div>
                 <img src="/images/banner3.svg">
