--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,8 +54,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-arrow-up-right-dots"></i></span>
                 <h2 class="mt-6 mb-2">网络营销</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">我们是 Google 的全球合作伙伴，通过了 Google 的资质认证，具备独立开户的权限，以及为客户提供专业服务的能力
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
@@ -63,8 +62,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-sitemap"></i></span>
                 <h2 class="mt-6 mb-2">网站开发</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">打造真正符合企业需求的、具有独特魅力且易于数据时代传播的专属品牌，打造高品质专属于企业的网站
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
@@ -72,8 +70,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-rotate"></i></span>
                 <h2 class="mt-6 mb-2">网站优化</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">多年网络营销经验，帮您建立可持续的品牌策划和业务战略、从品牌发展和创意策划到SEO优化
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
@@ -81,8 +78,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-registered"></i></span>
                 <h2 class="mt-6 mb-2">商标注册</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">为在多国保护发明、商标和外观设计提供一条快速、高效、合算的途径
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
@@ -90,8 +86,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fab fa-creative-commons"></i></span>
                 <h2 class="mt-6 mb-2">公司注册</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">提供全面会计，税务和财务规划服务，为中国的企业和个人提供境外公司注册服务
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
