--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,8 +45,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-earth-asia"></i></span>
                 <h2 class="mt-6 mb-2">SEO托管</h2>
-                <div class="text-neutral-400 text-sm">Consequatur rerum quibusdam omnis labore ipsam omnis aliquam et
-                    blanditiis. Omnis in natus amet.
+                <div class="text-neutral-400 text-sm">多年网络营销经验，帮您建立可持续的品牌策划和业务战略、从品牌发展和创意策划到SEO优化
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
@@ -70,7 +69,7 @@
                     class="bg-primary-200 text-secondary-500 group-hover:bg-primary-500 group-hover:text-white p-4 rounded-full"><i
                     class="w-5 h-5 fas fa-rotate"></i></span>
                 <h2 class="mt-6 mb-2">网站优化</h2>
-                <div class="text-neutral-400 text-sm">多年网络营销经验，帮您建立可持续的品牌策划和业务战略、从品牌发展和创意策划到SEO优化
+                <div class="text-neutral-400 text-sm">技术SEO
                 </div>
             </div>
             <div class="group text-center p-6 border border-neutral-50 rounded-md hover:shadow-sm">
