--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     {% include gdpr.html %}
     <div class="flex justify-between max-w-7xl mx-auto p-4 text-center text-neutral-800">
         <div>
-            版本所有 <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
+            版本所有 <a href="{{ '/' | absolute_url }}">{{ site.title }}</a>
         </div>
         <div class="space-x-2">
             {% include social.html %}
