--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,5 @@
     <link href="/css/app.css" rel="stylesheet">
     <link rel="icon" href="/images/android-chrome-192x192.png" sizes="192x192"/>
     <link rel="apple-touch-icon" href="/images/android-chrome-512x512.png"/>
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/' | relative_url }}feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}" />
 </head>
